# python-pep505

./: LICENSE  README.md  setup.cfg
src/: pep505.pth
src/grammar/: python_pep505.gram
src/pep505/: __init__.py  _test.py  auto.py  hook.py  parser.py  test.py
src/pep505/pegen/: parser.py
