[metadata]
name = pep505
version = 0.9.0
author = Doug Swarin
author_email = dswarin@gmail.com
description = PEP505 Polyfill (None-aware/null-coalescing operators)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acaos/python-pep505
project_urls =
    Bug Tracker = https://github.com/acaos/python-pep505/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.11

[options.packages.find]
where = src
